<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:icon="@drawable/ic_trash"
		android:id="@+id/menu_item_remove"
		android:title="@string/delete_record"
		app:showAsAction="always"/>

	<item
		android:icon="@drawable/ic_star_hover"
		android:id="@+id/menu_item_star_hover"
		android:title="@string/favorite"
		android:visible="false"
		app:showAsAction="always"/>

	<item
		android:icon="@drawable/ic_star"
		android:id="@+id/menu_item_star"
		android:title="@string/favorite"
		android:visible="false"
		app:showAsAction="always"/>
	<item
		android:icon="@drawable/ic_ok_red"
		android:id="@+id/action_save"
		android:title="@string/save"
		app:showAsAction="always"/>
</menu>